@@ -2559,7 +2559,7 @@ class WikiPage extends Page {
 	 * @return mixed ParserOptions object or boolean false
 	 */
 	public function getParserOptions( $canonical = false ) {
-		global $wgUser, $wgLanguageCode;
+		global $wgUser;
 
 		if ( !$this->mParserOptions || $canonical ) {
 			$user = !$canonical ? $wgUser : new User;
@@ -2568,7 +2568,7 @@ class WikiPage extends Page {
 			$parserOptions->enableLimitReport();
 
 			if ( $canonical ) {
-				$parserOptions->setUserLang( $wgLanguageCode ); # Must be set explicitely
+				$parserOptions->setUserLang( $this->mTitle->getPageLanguage() ); # Must be set explicitely
 				return $parserOptions;
 			}
 			$this->mParserOptions = $parserOptions;
