@@ -274,10 +274,12 @@ class ParserOptions {
 	 * settings.
 	 *
 	 * @since 1.17
+	 * @param $forOptions Array
+	 * @param $title Title: used to get the content language of the page
 	 * @return \string Page rendering hash
 	 */
-	public function optionsHash( $forOptions ) {
-		global $wgContLang, $wgRenderHashAppend;
+	public function optionsHash( $forOptions, $title = null ) {
+		global $wgRenderHashAppend, $wgTitle;
 
 		$confstr = '';
 
@@ -321,7 +323,12 @@ class ParserOptions {
 
 		// add in language specific options, if any
 		// @todo FIXME: This is just a way of retrieving the url/user preferred variant
-		$confstr .= $wgContLang->getExtraHashOptions();
+		if( !is_null( $title ) ) {
+			$confstr .= $title->getPageLanguage()->getExtraHashOptions();
+		} else {
+			global $wgContLang;
+			$confstr .= $wgContLang->getExtraHashOptions();
+		}
 
 		$confstr .= $wgRenderHashAppend;
 
